Add and edit claim
